# agentic-design-patterns

./: .env.example  .gitignore  01_agents.py  02_agents_streamed_response.py  03_tools.py  04_agents_as_tools.py  05_handoffs.py  06_structured_outputs.py  07_guardrails.py  08_parallelization.py  09_evaluator_optimizer.py  10_state_and_memory.py  README.md  pyproject.toml
assets/code_review/: buggy_python.py  injection_python.py
assets/json/: tools.json  tools_new.json
demo/: 01_agents.py  02_agents_streamed_response.py  03_tools.py  04_agents_as_tools.py  05_handoffs.py  06_structured_outputs.py  07_guardrails.py  08_parallelization.py  09_evaluator_optimizer.py  10_state_and_memory.py
demo/guardrails/: __init__.py  prompt_injection.py  sensitive_data_leak.py
demo/my_agents/: __init__.py  billing_agent.py  code_reviewer.py  code_reviewer_guarded.py  devils_advocate.py  email_sender.py  frontend_developer.py  research_assistant.py  research_assistant_orchestrator.py  review_aggregator.py  specialist_reviewers.py  triage_agent.py
demo/tools/: __init__.py  db.py  memory_demo.db  send_mail_using_html.py  send_mail_using_markdown.py  web_search.py
demo/utils/: __init__.py  get_source_code.py  svg_assets.py  token_usage.py  trace_id.py
guardrails/: __init__.py  prompt_injection.py  sensitive_data_leak.py
my_agents/: __init__.py
my_agents/cloud_desk_company/: router_agent.py  tech_support.py
my_agents/code_review/: code_reviewer_guarded.py  review_aggregator.py
my_agents/common/: email_sender.py  (+1 more)
tools/: __init__.py  db.py
utils/: __init__.py
(+18 files in other folders)
